# victron-solar

./: .gitignore  README.md
.github/: copilot-instructions.md
data/: SolarHistory.csv
victron-cobol/: .containerignore  .gitignore  Containerfile  Makefile  README.md
victron-cobol/coverage/: cobol-coverage.json  coverage.info
victron-cobol/coverage/html/: index.html
victron-cobol/docs/: GnuCOBOL_vs_IBM_COBOL_Analysis.md
victron-cobol/output/: SOLARCOST  SOLARCOST.c  SOLARCOST.c##SOLARCOST.c.h.gcov  SOLARCOST.c##SOLARCOST.c.l.h.gcov  SOLARCOST.c.gcov  SOLARCOST.c.h  SOLARCOST.c.l.h  SOLARCOST.gcda  SOLARCOST.gcno  SOLARCOST.i  solar_cost_report.txt
victron-cobol/scripts/: build-coverage.sh  build.sh  generate-coverage-report.sh  render-cobol-coverage.py  run-coverage.sh  run.sh
victron-cobol/src/: SOLARCOST.cbl
victron-python/: .gitignore  Makefile  README.md  pyproject.toml  solar_cost_report.txt
victron-python/docs/: DASHBOARD_GUIDE.md  MODERNIZATION_REPORT.md
victron-python/src/: cost_analysis.py  data_quality.py  models.py  pipeline.py  visualization.py
victron-python/tests/: test_cost_analysis.py  test_data_quality.py  test_pipeline.py  test_pipeline_polars.py  test_visualization.py
victron-python/victron/: __init__.py  pipeline.py
