[project]
name = "victron-python"
version = "0.1.0"
description = "Data pipeline for solar CSV ingestion, processing, and reporting."
authors = ["Your Name <your@email.com>"]
requires-python = ">=3.9"

[tool.pdm]
[tool.poetry]

[project.dependencies]
polars = "*"
pydantic = "*"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
