[project]
name = "victron-python"
version = "0.1.0"
description = "Data pipeline for solar CSV ingestion, processing, and reporting."
authors = [
	{name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.9"

[tool.pdm]
[tool.poetry]


dependencies = [
	"polars",
	"pydantic",
	"matplotlib",
	"great_expectations"
]


[project.optional-dependencies]
test = [
	"pytest",
	"flake8"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
